# EduWiz

./: .gitignore  README.md  contributing.md  docker-compose.yml  package-lock.json
backend/: .firebaserc  .gitignore  Dockerfile  database.rules.json  firebase.rc  pyproject.toml  requirements.txt
backend/server/: __main__.py  logger.py  server.py
backend/server/lib/: animator_prompt.txt  animator_prompt_scene.txt  chat.py  chat_system.txt  firebase.py  generator.py  mathematician_prompt.txt  mathematician_prompt_scene.txt  renderer.py  retry.py  retry_prompt.txt  scene_gen.py  text_animator_prompt_scene.txt  text_checker_prompt_scene.txt
backend/server/lib/auth/: __init__.py  invariant.py  middleware.py  token.py
backend/server/routes/: chat.py  health.py  man.py  s3.py  vector.py  video.py
backend/server/routes/vector/: __init__.py  embed.py  search.py
backend/server/schemas/: health.py  render.py
backend/server/services/: firebase.py  rabbitmq.py  retry_service.py  status.py
firebase/: firebase.json
frontend/: .firebaserc  .gitignore  firestore.rules  jest.config.ts  jest.setup.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: ProviderButton.tsx  SearchBar.tsx  Sidebar.tsx  Sidesheet.tsx  ThreeJSBackground.tsx  ThreeScene.tsx  TitleComponent.tsx  previousChats.tsx
frontend/hooks/: useChats.tsx  useLighting.ts  useParticleSystem.ts  (+1 more)
renderer/: Dockerfile  logger.py  main.py  manager.py  rabbitmq.py  requirements.txt  text_manager.py  utils.py  worker.py
(+31 files in other folders)
