[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.4",
    "aiobotocore>=2.21.1",
    "fastapi[standard]>=0.115.7",
    "firebase-admin>=6.6.0",
    "langchain>=0.3.19",
    "langchain-core>=0.3.37",
    "langchain-google-genai>=2.0.10",
    "langchain-openai>=0.3.7",
    "uvicorn>=0.34.0",
]
